--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssb64-image-resource-util",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "View, modify, add, or delete images from an SSB64 image resource file",
   "main": "js/main.js",
   "scripts": {
@@ -12,7 +12,8 @@
   "dependencies": {
     "promise": "^7.1.1"
   },
-  "devDependencies":{
-    "browserify": "^13.0.0"
+  "devDependencies": {
+    "browserify": "^13.0.0",
+    "watchify": "^3.11.1"
   }
 }
